examples/good/13-int-bool-swap.afl
n :: Int;

Let n = (True);

somePred :: Bool;

Let pred = (2);

main :: Int;

Let main = (n);