examples/bad/5-declaration-too-long.afl
f :: Int->Int->Int;

Let f = (lambda n::Int . (n)::Int);

main :: Int;

Let main = ((f) $ (0));
